File Name: CHANGES

10/15/2012 FASP 1.1.3:
- Add scons support for shared library.
- Add scons support for OpenMP.
- Add scons help message.
- Update documentation.

10/13/2012 FASP 1.1.2:
- Add matrix-free version of iterative methods.
- Add a test example for matrix-free format. 
- Some changes to OMP routines.
- Fix an OMP timing bug.
- Add OMP support for formats.c and amg_setup_sa.c.

09/22/2012 FASP 1.1.1:
- Add scons support for base/.
- Add red-black GS as a smoother for structured grids.
- Use single-file interprocedual optimization as default for Intel IPO; multi-file will generate very large lib files.
- Modify OMP version for smoothers.
- Format amg.c and tutorial/poisson-amg.c.
- Clarify some comments in tutorial examples.
- Test DIAGONAL_PERF for CF smoothing.

09/15/2012 FASP 1.1.0:
- Use Direct solvers as default in VS2008 Release version.
- Fix bug in VS2008 Release setting.
- Fix regression.c.

09/12/2012 FASP 1.0.9:
- Fix warnings from VS2008.
- Upadet ICC compiler in VS2008.
- Compare classical AMG implementation with an older version and make a few changes.
- Locate the difference between the old AMG and new one: CF-ordering is used as default.
- Fix warning in VS2008 due to coarset level solver. 
- Bug fixing: Modify precond_data for Black Oil to fix the parameter passing problem. 

09/11/2012 FASP 1.0.8:
- Merge two branches.
- Fix a bug in BiCGstab output.
- Fix a bug in OpenMP related to "critical" in transpose operation.
- Set -Wall as default, saved in make.inc.default.
- Fix all gcc warnings, except schwarz.f --need to be replaced later.

09/04/2012 FASP 1.0.7:
- Change some filenames to keep naming consistent.
- Some more OMP changes, make changes to fasp4monix accordingly.
- Several OMP optimization changes.
- Change default parameters: coarse_scaling is not safe.
- Modify make.inc and prepare it for debug environment.

08/25/2012 FASP 1.0.6:
- Replace "#if FASP_USE_OPENMP" by the system environment variable "_OPENMP".